fix image shadow in dark mode

--- a/app/assets/styles/base.css
+++ b/app/assets/styles/base.css
@@ -8,6 +8,10 @@
     box-shadow: var(--ui-shadow);
   }
 
+  .image-legend {
+    padding: 8px;
+  }
+
   .spinner {
     width: 100%;
     display: flex;
